--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,14 +10,16 @@
 }
 .header{
     background-color: black;
-    height: 50px;
-    /* display: flex;  */
-    justify-content: center;
+    height: 80px;
+    display: flex; 
+    justify-content: right;
     align-items: center;
+    padding-right: 100px;
+    
 }
 .hea{
     color: red;
-    margin-top: 30px;
+    /* margin-top: 30px; */
 
 }
 .active{
