font awesome icon has been aded

--- a/src/components/Question/Questions.css
+++ b/src/components/Question/Questions.css
@@ -9,6 +9,9 @@
     background-color: aqua;
     padding: 25px;
     /* margin: 20px; */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
    
 }
 .multiple{
