--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,29 +1,25 @@
 .catagories{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    display: flex;
+    flex-direction: row;
+    justify-content:space-evenly;
 }
 .header-section{
-    padding: 50px;
     text-align: center;
     color: gray;
    
 }
-.header-section{
-    width: 50%;
-}
+
 .header-section p{
     text-align: center;
     margin: 0px auto;
 
 }
-.background{
-    width: 50%;
-}
 .background img{
     width: 100%;
 }
-.header-area{
-    width: 100%;
+
+.content{
     display: flex;
-    flex-direction: row;
+   justify-content: center;
+   align-items: center;
 }
